# mausam

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: mausam.rb
aur/: PKGBUILD
docs/plans/: 2026-03-09-v1-implementation.md  2026-03-09-v1-publish-design.md
src/: api.rs  cache.rs  config.rs  display.rs  loading.rs  main.rs  types.rs
src/display/: aqi.rs  compact.rs  full.rs  hourly.rs  json.rs  mod.rs
