[package]
name = "mausam"
version = "1.0.4"
edition = "2024"
description = "Beautiful weather in your terminal"
license = "MIT"
repository = "https://github.com/codeptor/mausam"
keywords = ["weather", "cli", "terminal", "forecast"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
terminal_size = "0.4"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
